[project]
name = "here"
dynamic = ["version"]
description = "Copies the current location to clipboard"
authors = [
    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "pyperclip==1.8.2",
    "actus~=0.7.1",
    "colex~=0.2.0",
    "keyboard==0.13.5",
    "survey>=5.4.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"main" = "here:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "here/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["here/**", "cl.bat"]
exclude = ["here/**/__pycache__"]
